# OwnDetection

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: detection.cpp  detectionv.cpp
